--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 Django==2.2.4
+django-filter==2.2.0
+djangorestframework==3.10.2
+et-xmlfile==1.0.1
+jdcal==1.4.1
+Markdown==3.1.1
+openpyxl==2.6.2
 Pillow==6.1.0
 pytz==2019.2
 sqlparse==0.3.0
