--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
+Choco==1.0.5
 Django==2.2.4
+django-cuser==2017.3.16
 django-filter==2.2.0
+django-parler==2.0
+django-parler-rest==2.0
+django-tinymce==2.8.0
 djangorestframework==3.10.2
 et-xmlfile==1.0.1
 jdcal==1.4.1
 Markdown==3.1.1
+MarkupSafe==1.1.1
+modeltranslation==0.25
 openpyxl==2.6.2
 Pillow==6.1.0
 pytz==2019.2
